--- a/index.html
+++ b/index.html
@@ -14,10 +14,21 @@
     <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="./css/pages/home.css">
 </head>
 
 <body>
-    CONTENT
+    <section>
+        HERO
+    </section>
+
+    <main>
+        MAIN CONTENT
+    </main>
+
+    <footer>
+        FOOTER
+    </footer>
 </body>
 
 </html>
