--- a/index.html
+++ b/index.html
@@ -18,16 +18,25 @@
 </head>
 
 <body>
-    <section>
-        HERO
+    <section class="container bg-main">
+        <div class="short-row">
+            HERO
+        </div>
     </section>
 
-    <main>
-        MAIN CONTENT
+    <main class="container">
+        <div class="row">
+            MAIN CONTENT
+        </div>
     </main>
 
-    <footer>
-        FOOTER
+    <footer class="container bg-main">
+        <div class="row">
+            SOCIALS
+        </div>
+        <div class="short-row">
+            BOTTOM TEXTS
+        </div>
     </footer>
 </body>
 
