--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 </head>
 
 <body>
-    <section class="container bg-main">
+    <section class="container hero bg-main">
         <div class="short-row">
-            HERO
+            <img class="logo" src="./img/logo.png" alt="Logo">
+            <h1 class="main-title">Coming soon</h1>
+            <p class="main-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore consectetur repudiandae nisi sit ullam tempore voluptatum earum similique magnam voluptas aut, quisquam deserunt nostrum laboriosam!</p>
         </div>
     </section>
 
