--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             <img class="logo" src="./img/logo.png" alt="Logo">
             <h1 class="main-title">Coming soon</h1>
             <p class="main-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore consectetur repudiandae nisi sit ullam tempore voluptatum earum similique magnam voluptas aut, quisquam deserunt nostrum laboriosam!</p>
+
+            <div class="btn">Click me</div>
+            <a href="#" class="btn">Click me</a>
+            <button class="btn">Click me</button>
+            <input class="btn" type="button" value="Click me">
+
             <div class="clock">
                 <div class="time">
                     <div class="value">432</div>
