Progress bar loading animation #11

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
                         <div class="value">91%</div>
                     </div>
                     <div class="progress">
-                        <div class="bar" style="width: 90%;"></div>
+                        <div class="bar" style="width: 90%;">
+                            <div class="loading"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="progress-bar">
@@ -65,7 +67,9 @@
                         <div class="value">86%</div>
                     </div>
                     <div class="progress">
-                        <div class="bar" style="width: 86%;"></div>
+                        <div class="bar" style="width: 86%;">
+                            <div class="loading"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="progress-bar">
@@ -74,7 +78,9 @@
                         <div class="value">50%</div>
                     </div>
                     <div class="progress">
-                        <div class="bar" style="width: 50%;"></div>
+                        <div class="bar" style="width: 50%;">
+                            <div class="loading"></div>
+                        </div>
                     </div>
                 </div>
             </div>
