--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
             <div class="column right-column">
                 <h2>Have any question?</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus, rerum. Praesentium <a href="mailto:vardenis@pastenis.lt">vardenis@pastenis.lt</a> explicabo ab. Mollitia, delectus et rem harum iure praesentium consectetur ipsam facilis in ipsum, beatae fuga?</p>
+                <form class="form">
+                    <input type="text" placeholder="Name" value="">
+                    <input type="text" placeholder="Email" value="">
+                    <textarea name="" id="" placeholder="Message"></textarea>
+                    <button class="btn" type="submit">Send message</button>
+                </form>
             </div>
         </div>
     </main>
